# OEPlanner

./: .gitignore  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: api-deploy.yml  deploy-azure-resources.yml  ui-deploy.yml  worker-deploy.yml
_playground/RabbitMQTutorial/: ConsumeFromQueue.py
deploy/bicep/: main.bicep  resources.bicep
ipynb/: RabbitMQHelloWorldReceieve.ipynb  RabbitMQHelloWorldSend.ipynb
src/BACKEND/OEPlannerAPI/: Dockerfile  pyproject.toml
src/BACKEND/OEPlannerAPI/oeplannerapi/: api_app.py  celery_app.py  main.py
src/BACKEND/OEPlannerWorker/: Dockerfile  pyproject.toml
src/BACKEND/OEPlannerWorker/oeplannerworker/: celery_app.py  worker_app.py
src/UI/OEPlanner/: README.md  angular.json  package-lock.json  package.json
src/UI/OEPlanner/src/: index.html
src/UI/OEPlanner/src/app/: app.component.spec.ts  app.component.ts
