[tool.poetry]
name = "oeplannerapi"
version = "0.1.0"
description = ""
authors = ["Richard Dalziel <RichardDalziel@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "0.100.0"
uvicorn = "0.23.1"
celery = "^5.3.1"
oeplannerworker = {path = "../oeplannerworker"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
app = "main:app"
