[tool.poetry]
name = "oeplannerworker"
version = "0.1.0"
description = ""
authors = ["Richard Dalziel <RichardDalziel@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
celery = "^5.3.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
